# deepbookpy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
deepbookpy/: __init__.py  deepbook_client.py  deepbook_query.py  deepbook_sdk.py  deepbookpy_query.py  version.py
deepbookpy/custom_types/: __init__.py  serialization_types.py
deepbookpy/transactions/: balance_manager.py  deepbook.py  deepbook_admin.py  flash_loans.py  governance.py
deepbookpy/types/: __init__.py
deepbookpy/utils/: coin.py  config.py  constant.py  constants.py  dto.py  helpers.py  normalizer.py
docs/: Makefile  quick-start.md
docs/source/: conf.py  deepbookpy.rst  flash_loans.rst  getting_started.rst  index.rst  orders.rst  pools.rst  staking_and_governance.rst  swaps.rst
examples/: deepbook_client.py
tests/: conftest.py
tests/integration/: test_deepbook_query.py
