[tool.poetry]
name = "deepbookpy"
version = "0.4.1"
description = "Sui Deepbook Python SDK"
authors = ["andreidev1 <andreid.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysui = "^0.35.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
sphinx-rtd-theme = "^1.2.2"
flaky = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
changelog = "https://github.com/andreidev1/deepbookpy/blob/main/CHANGELOG.md"
repository = "https://github.com/andreidev1/deepbookpy"
issues = "https://github.com/andreidev1/deepbookpy/issues"
documentation = "https://deepbookpy.readthedocs.io"